--- a/applications/source/file-source/pom.xml
+++ b/applications/source/file-source/pom.xml
@@ -10,8 +10,9 @@
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <artifactId>source-parent</artifactId>
+        <artifactId>stream-applications-source</artifactId>
         <version>3.2.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <dependencies>
@@ -61,4 +62,7 @@
             </plugin>
         </plugins>
     </build>
+
+
+
 </project>
