--- a/applications/source/geode-source/pom.xml
+++ b/applications/source/geode-source/pom.xml
@@ -10,7 +10,7 @@
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <artifactId>source-parent</artifactId>
+        <artifactId>stream-applications-source</artifactId>
         <version>3.2.1-SNAPSHOT</version>
     </parent>
 
