--- a/applications/source/sftp-source/pom.xml
+++ b/applications/source/sftp-source/pom.xml
@@ -10,8 +10,9 @@
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <artifactId>source-parent</artifactId>
+        <artifactId>stream-applications-core</artifactId>
         <version>3.2.1-SNAPSHOT</version>
+        <relativePath/>
     </parent>
 
     <dependencies>
