--- a/applications/source/twitter-search-source/pom.xml
+++ b/applications/source/twitter-search-source/pom.xml
@@ -10,8 +10,9 @@
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <artifactId>source-parent</artifactId>
+        <artifactId>stream-applications-core</artifactId>
         <version>3.2.1-SNAPSHOT</version>
+        <relativePath/>
     </parent>
 
     <dependencies>
@@ -33,7 +34,7 @@
         <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-client-java</artifactId>
-            <version>${mockserver.version}</version>
+	        <version>${mockserver.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
