--- a/applications/source/zeromq-source/pom.xml
+++ b/applications/source/zeromq-source/pom.xml
@@ -11,8 +11,9 @@
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <artifactId>source-parent</artifactId>
+        <artifactId>stream-applications-core</artifactId>
         <version>3.2.1-SNAPSHOT</version>
+        <relativePath/>
     </parent>
 
     <dependencies>
