--- a/applications/processor/http-request-processor/src/main/resources/META-INF/dataflow-configuration-metadata.properties
+++ b/applications/processor/http-request-processor/src/main/resources/META-INF/dataflow-configuration-metadata.properties
@@ -1,3 +1,3 @@
-configuration-properties.classes=org.springframework.cloud.fn.http.request.HttpRequestFunctionProperties
-configuration-properties.names=spring.codec.max-in-memory-size
+configuration-properties.classes=org.springframework.cloud.fn.http.request.HttpRequestFunctionProperties,\
+  org.springframework.boot.autoconfigure.codec.CodecProperties
 
