--- a/applications/processor/header-enricher-processor/pom.xml
+++ b/applications/processor/header-enricher-processor/pom.xml
@@ -6,12 +6,12 @@
     <artifactId>header-enricher-processor</artifactId>
     <name>header-enricher-processor</name>
     <description>header-enricher processor apps</description>
-    <version>3.2.1-SNAPSHOT</version>
+    <version>${revision}</version>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.2.1-SNAPSHOT</version>
+        <version>3.2.1</version>
         <relativePath/>
     </parent>
 
