--- a/applications/sink/jdbc-sink/pom.xml
+++ b/applications/sink/jdbc-sink/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jdbc-sink</artifactId>
-    <version>3.2.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <name>jdbc-sink</name>
     <description>jdbc sink apps</description>
     <packaging>jar</packaging>
