--- a/applications/sink/mongodb-sink/pom.xml
+++ b/applications/sink/mongodb-sink/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>mongodb-sink</artifactId>
-    <version>3.2.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <name>mongodb-sink</name>
     <description>mongodb sink apps</description>
     <packaging>jar</packaging>
