--- a/applications/sink/zeromq-sink/pom.xml
+++ b/applications/sink/zeromq-sink/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>zeromq-sink</artifactId>
-    <version>3.2.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <name>zeromq-sink</name>
     <description>0MQ sink apps</description>
     <packaging>jar</packaging>
