--- a/functions/common/cdc-debezium-common/pom.xml
+++ b/functions/common/cdc-debezium-common/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -15,10 +15,15 @@
 	<description>Change Data Capture (CDC) Debezium Common</description>
 
 	<properties>
-		<version.debezium>1.7.1.Final</version.debezium>
+		<version.debezium>1.9.6.Final</version.debezium>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>io.debezium</groupId>
+			<artifactId>debezium-api</artifactId>
+			<version>${version.debezium}</version>
+		</dependency>
 		<dependency>
 			<groupId>io.debezium</groupId>
 			<artifactId>debezium-embedded</artifactId>
@@ -57,6 +62,12 @@
 		<dependency>
 			<groupId>io.debezium</groupId>
 			<artifactId>debezium-connector-sqlserver</artifactId>
+			<optional>true</optional>
+			<version>${version.debezium}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.debezium</groupId>
+			<artifactId>debezium-connector-db2</artifactId>
 			<optional>true</optional>
 			<version>${version.debezium}</version>
 		</dependency>
