--- a/functions/consumer/mongodb-consumer/pom.xml
+++ b/functions/consumer/mongodb-consumer/pom.xml
@@ -24,8 +24,8 @@
             <artifactId>mongodb-driver-reactivestreams</artifactId>
         </dependency>
         <dependency>
-            <groupId>de.flapdoodle.embed</groupId>
-            <artifactId>de.flapdoodle.embed.mongo</artifactId>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>mongodb</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
