--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -54,8 +54,7 @@ jobs:
             MAX_PARALLEL=$((5 * COUNT / 4))
             if ((MAX_PARALLEL == COUNT)); then
               MAX_PARALLEL=$((COUNT + 1))
-            fi
-            
+            fi            
             MATRIX=$(jq -c . matrix.json)
             PROCESSORS=$(jq -c '.processors' matrix.json)
             SINKS=$(jq -c '.sinks' matrix.json)
@@ -79,110 +78,110 @@ jobs:
       sinks: ${{ env.SINKS }}
       processors: ${{ env.PROCESSORS }}
       matrix: ${{ env.matrix }}
-#  scale-runners:
-#    runs-on: ubuntu-latest
-#    needs:
-#      - parameters
-#    concurrency:
-#      group: stream-apps-gh-runners
-#      cancel-in-progress: false
-#    steps:
-#      - name: 'Configure: checkout stream-applications'
-#        uses: actions/checkout@v3
-#        with:
-#          ref: 'main'
-#      - name: Ensure scripts are executable
-#        shell: bash
-#        run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
-#      - name: 'Configure: Configure provider for stream-apps-gh-runners'
-#        shell: bash
-#        timeout-minutes: 15
-#        run: |
-#          RUNNER_TYPE=$(./scripts/determine-provider.sh stream-apps-gh-runners)
-#          echo "RUNNER_TYPE=$RUNNER_TYPE"
-#          echo "RUNNER_TYPE=$RUNNER_TYPE" >> $GITHUB_ENV
-#      - name: 'Install: gcloud cli'
-#        if: ${{ env.RUNNER_TYPE == 'gke' }}
-#        uses: ./.github/actions/install-gcloud
-#      - name: 'Action: gcloud auth'
-#        if: ${{ env.RUNNER_TYPE == 'gke' }}
-#        id: auth_gcloud
-#        uses: 'google-github-actions/auth@v0'
-#        with:
-#          create_credentials_file: true
-#          credentials_json: ${{ secrets.GCP_CRED_JSON }}
-#      - name: 'Configure: Install TMC'
-#        if: ${{ env.RUNNER_TYPE == 'tmc' }}
-#        uses: ./.github/actions/install-tmc
-#      - name: 'Action: Login to TMC'
-#        if: ${{ env.RUNNER_TYPE == 'tmc' }}
-#        uses: ./.github/actions/auth-tmc
-#        timeout-minutes: 15
-#        with:
-#          tmc_api_token: '${{ secrets.TMC_API_TOKEN }}'
-#          fail_on_error: false
-#      - name: 'Install: Groovy'
-#        uses: ./.github/actions/install-groovy
-#        with:
-#          version: 4.0.4
-#      - name: 'Action: wait for cluster - stream-apps-gh-runners'
-#        shell: bash
-#        timeout-minutes: 5
-#        env:
-#          VERBOSE: ${{ inputs.verbose && '--verbose' || '' }}
-#        run: ./scripts/wait-for-cluster-${RUNNER_TYPE}.sh stream-apps-gh-runners
-#      - name: 'Configure: Cluster Region'
-#        if: ${{ env.PROVIDER == 'gke' }}
-#        shell: bash
-#        run: |
-#          set +e
-#          REGION=$(gcloud container clusters list | grep -F "stream-apps-gh-runners" | awk '{print $2}')
-#          if [ "$REGION" == "" ]; then
-#            echo "CREATE_CLUSTER=true" >> $GITHUB_ENV
-#          else
-#            REG_MT=$(./scripts/determine-default.sh stream-apps-gh-runners "machine_type")
-#            export REGION
-#            CUR_MT=$(./scripts/determine-machine-type.sh)
-#            if [ "$REQ_MT" != "$CUR_MT" ]; then
-#              echo "::notice ::Current machinetype is $CUR_MT and required is $REQ_MT"
-#              echo "CREATE_CLUSTER=true" >> $GITHUB_ENV
-#            fi
-#          fi
-#          echo "REGION=${{ inputs.region }}" >> $GITHUB_ENV
-#      - name: 'Action: Re/Create SCDF PRO Runners'
-#        if: ${{ env.CREATE_CLUSTER == 'true' }}
-#        shell: bash
-#        env:
-#          VERBOSE: ${{ inputs.verbose && '--verbose' || '' }}
-#        run: |
-#          set +e
-#          ./scripts/delete-runners-${RUNNER_TYPE}.sh
-#          set -e
-#          ./scripts/create-runners-cluster-${RUNNER_TYPE}.sh
-#      - name: 'Action: scale cluster - stream-apps-gh-runners for ${{ needs.parameters.outputs.max_parallel }} runners'
-#        shell: bash
-#        timeout-minutes: 30
-#        env:
-#          CLUSTER_NAME: 'stream-apps-gh-runners'
-#          VERBOSE: ${{ inputs.verbose && '--verbose' || '' }}
-#        run: |
-#          echo "::notice ::Scaling stream-apps-gh-runners to ${{ needs.parameters.outputs.max_parallel }} pods"
-#          ./scripts/scale-cluster-pods.sh stream-apps-gh-runners ${{ needs.parameters.outputs.max_parallel }}
-#      - name: 'Check: Wait for cluster nodes: stream-apps-gh-runners'
-#        shell: bash
-#        timeout-minutes: 25
-#        env:
-#          VERBOSE: ${{ inputs.verbose && '--verbose' || '' }}
-#        run: |
-#          echo "::notice ::Waiting for cluster stream-apps-gh-runners and it's nodes"
-#          ./scripts/wait-for-cluster-${RUNNER_TYPE}.sh stream-apps-gh-runners --nodes
-#      - name: 'Action: Increase runners with ${{ needs.parameters.outputs.max_parallel }}'
-#        timeout-minutes: 10
-#        uses: ./.github/actions/increase-runners
-#        with:
-#          inc: ${{ needs.parameters.outputs.max_parallel }}
-#    outputs:
-#      runner-type: '${{ env.RUNNER_TYPE }}'
+  #  scale-runners:
+  #    runs-on: ubuntu-latest
+  #    needs:
+  #      - parameters
+  #    concurrency:
+  #      group: stream-apps-gh-runners
+  #      cancel-in-progress: false
+  #    steps:
+  #      - name: 'Configure: checkout stream-applications'
+  #        uses: actions/checkout@v3
+  #        with:
+  #          ref: 'main'
+  #      - name: Ensure scripts are executable
+  #        shell: bash
+  #        run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
+  #      - name: 'Configure: Configure provider for stream-apps-gh-runners'
+  #        shell: bash
+  #        timeout-minutes: 15
+  #        run: |
+  #          RUNNER_TYPE=$(./scripts/determine-provider.sh stream-apps-gh-runners)
+  #          echo "RUNNER_TYPE=$RUNNER_TYPE"
+  #          echo "RUNNER_TYPE=$RUNNER_TYPE" >> $GITHUB_ENV
+  #      - name: 'Install: gcloud cli'
+  #        if: ${{ env.RUNNER_TYPE == 'gke' }}
+  #        uses: ./.github/actions/install-gcloud
+  #      - name: 'Action: gcloud auth'
+  #        if: ${{ env.RUNNER_TYPE == 'gke' }}
+  #        id: auth_gcloud
+  #        uses: 'google-github-actions/auth@v0'
+  #        with:
+  #          create_credentials_file: true
+  #          credentials_json: ${{ secrets.GCP_CRED_JSON }}
+  #      - name: 'Configure: Install TMC'
+  #        if: ${{ env.RUNNER_TYPE == 'tmc' }}
+  #        uses: ./.github/actions/install-tmc
+  #      - name: 'Action: Login to TMC'
+  #        if: ${{ env.RUNNER_TYPE == 'tmc' }}
+  #        uses: ./.github/actions/auth-tmc
+  #        timeout-minutes: 15
+  #        with:
+  #          tmc_api_token: '${{ secrets.TMC_API_TOKEN }}'
+  #          fail_on_error: false
+  #      - name: 'Install: Groovy'
+  #        uses: ./.github/actions/install-groovy
+  #        with:
+  #          version: 4.0.4
+  #      - name: 'Action: wait for cluster - stream-apps-gh-runners'
+  #        shell: bash
+  #        timeout-minutes: 5
+  #        env:
+  #          VERBOSE: ${{ inputs.verbose && '--verbose' || '' }}
+  #        run: ./scripts/wait-for-cluster-${RUNNER_TYPE}.sh stream-apps-gh-runners
+  #      - name: 'Configure: Cluster Region'
+  #        if: ${{ env.PROVIDER == 'gke' }}
+  #        shell: bash
+  #        run: |
+  #          set +e
+  #          REGION=$(gcloud container clusters list | grep -F "stream-apps-gh-runners" | awk '{print $2}')
+  #          if [ "$REGION" == "" ]; then
+  #            echo "CREATE_CLUSTER=true" >> $GITHUB_ENV
+  #          else
+  #            REG_MT=$(./scripts/determine-default.sh stream-apps-gh-runners "machine_type")
+  #            export REGION
+  #            CUR_MT=$(./scripts/determine-machine-type.sh)
+  #            if [ "$REQ_MT" != "$CUR_MT" ]; then
+  #              echo "::notice ::Current machinetype is $CUR_MT and required is $REQ_MT"
+  #              echo "CREATE_CLUSTER=true" >> $GITHUB_ENV
+  #            fi
+  #          fi
+  #          echo "REGION=${{ inputs.region }}" >> $GITHUB_ENV
+  #      - name: 'Action: Re/Create SCDF PRO Runners'
+  #        if: ${{ env.CREATE_CLUSTER == 'true' }}
+  #        shell: bash
+  #        env:
+  #          VERBOSE: ${{ inputs.verbose && '--verbose' || '' }}
+  #        run: |
+  #          set +e
+  #          ./scripts/delete-runners-${RUNNER_TYPE}.sh
+  #          set -e
+  #          ./scripts/create-runners-cluster-${RUNNER_TYPE}.sh
+  #      - name: 'Action: scale cluster - stream-apps-gh-runners for ${{ needs.parameters.outputs.max_parallel }} runners'
+  #        shell: bash
+  #        timeout-minutes: 30
+  #        env:
+  #          CLUSTER_NAME: 'stream-apps-gh-runners'
+  #          VERBOSE: ${{ inputs.verbose && '--verbose' || '' }}
+  #        run: |
+  #          echo "::notice ::Scaling stream-apps-gh-runners to ${{ needs.parameters.outputs.max_parallel }} pods"
+  #          ./scripts/scale-cluster-pods.sh stream-apps-gh-runners ${{ needs.parameters.outputs.max_parallel }}
+  #      - name: 'Check: Wait for cluster nodes: stream-apps-gh-runners'
+  #        shell: bash
+  #        timeout-minutes: 25
+  #        env:
+  #          VERBOSE: ${{ inputs.verbose && '--verbose' || '' }}
+  #        run: |
+  #          echo "::notice ::Waiting for cluster stream-apps-gh-runners and it's nodes"
+  #          ./scripts/wait-for-cluster-${RUNNER_TYPE}.sh stream-apps-gh-runners --nodes
+  #      - name: 'Action: Increase runners with ${{ needs.parameters.outputs.max_parallel }}'
+  #        timeout-minutes: 10
+  #        uses: ./.github/actions/increase-runners
+  #        with:
+  #          inc: ${{ needs.parameters.outputs.max_parallel }}
+  #    outputs:
+  #      runner-type: '${{ env.RUNNER_TYPE }}'
   core:
     runs-on: ubuntu-latest
     steps:
@@ -213,12 +212,14 @@ jobs:
           echo "::notice ::building - stream-applications-core"
           $ROOT_DIR/mvnw ${{ inputs.verbose && '--debug' || '' }} -s $ROOT_DIR/.settings.xml deploy -f applications/stream-applications-core -N -U
           echo "::notice ::core build completed"
+  # Build and tests apps and publishes to repo and creates container
   processors:
     if: ${{ needs.parameters.outputs.processors != '' && needs.parameters.outputs.processors != null }}
     needs:
       - core
       - parameters
     strategy:
+      fail-fast: false
       max-parallel: 4
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.processors) }}
@@ -255,6 +256,7 @@ jobs:
       - core
       - parameters
     strategy:
+      fail-fast: false
       max-parallel: 4
       matrix:
         app: ${{ fromJson(needs.parameters.outputs.sinks) }}
@@ -291,6 +293,7 @@ jobs:
       - core
       - parameters
     strategy:
+      fail-fast: false
       # will be removed when private runners are used.
       max-parallel: 4
       matrix:
