--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -3,11 +3,6 @@ name: 'Stream Applications - Common'
 on:
   workflow_call:
     inputs:
-      version:
-        type: string
-        required: false
-        default: 'main'
-        description: 'Version Tag'
       branch:
         type: string
         required: false
@@ -72,12 +67,21 @@ jobs:
               echo "SOURCES=$SOURCES"
             fi
           popd
+          if [ "${{ inputs.branch" == "main" ]; then
+            echo "JDK_BUILD=17" >> $GITHUB_ENV
+            echo "JRE_DEFAULT=17" >> $GITHUB_ENV
+          else
+            echo "JDK_BUILD=8" >> $GITHUB_ENV
+            echo "JRE_DEFAULT=11" >> $GITHUB_ENV
+          fi
     outputs:
       max_parallel: ${{ env.MAX_PARALLEL }}
       sources: ${{ env.SOURCES }}
       sinks: ${{ env.SINKS }}
       processors: ${{ env.PROCESSORS }}
       matrix: ${{ env.matrix }}
+      jdk_build: ${{ env.JDK_BUILD }}
+      jre_version: ${{ env.JRE_DEFAULT }}
   #  scale-runners:
   #    runs-on: ubuntu-latest
   #    needs:
@@ -184,6 +188,8 @@ jobs:
   #      runner-type: '${{ env.RUNNER_TYPE }}'
   core:
     runs-on: ubuntu-latest
+    needs:
+      - parameters
     steps:
       - name: 'Configure: checkout stream-applications@${{ inputs.branch }}'
         uses: actions/checkout@v3
@@ -195,7 +201,7 @@ jobs:
       - name: 'Configure: Install Java'
         uses: actions/setup-java@v1
         with:
-          java-version: 17
+          java-version: ${{ needs.parameters.outputs.jdk_build }}
       - name: 'Action: build initial dependencies'
         shell: bash
         env:
@@ -240,16 +246,23 @@ jobs:
       - name: 'Configure: Install Java'
         uses: actions/setup-java@v1
         with:
-          java-version: 17
+          java-version: ${{ needs.parameters.outputs.jdk_build }}
+      - name: 'Configure: Install Pack'
+        uses: ./.github/actions/install-pack
       - name: 'Build: ${{ matrix.app }}'
         shell: bash
         env:
-          VERSION: ${{ inputs.version }}
-          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
           CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
           CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
+          DEFAULT_JDK: ${{ needs.parameters.outputs.jre_version }}
         run: ./build-app.sh "stream-applications/applications/processor/${{ matrix.app }}"
+      - name: 'Publish: ${{ matrix.app }}'
+        shell: bash
+        env:
+          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          DEFAULT_JDK: ${{ needs.parameters.outputs.jre_version }}
+        run: ./publish-app.sh "stream-applications/applications/sink/${{ matrix.app }}"
   sinks:
     if: ${{ needs.parameters.outputs.sinks != '' && needs.parameters.outputs.sinks != null }}
     needs:
@@ -277,16 +290,23 @@ jobs:
       - name: 'Configure: Install Java'
         uses: actions/setup-java@v1
         with:
-          java-version: 17
+          java-version: ${{ needs.parameters.outputs.jdk_build }}
+      - name: 'Configure: Install Pack'
+        uses: ./.github/actions/install-pack
       - name: 'Build: ${{ matrix.app }}'
         shell: bash
         env:
-          VERSION: ${{ inputs.version }}
-          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
           CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
           CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
+          DEFAULT_JDK: ${{ needs.parameters.outputs.jre_version }}
         run: ./build-app.sh "stream-applications/applications/sink/${{ matrix.app }}"
+      - name: 'Publish: ${{ matrix.app }}'
+        shell: bash
+        env:
+          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          DEFAULT_JDK: ${{ needs.parameters.outputs.jre_version }}
+        run: ./publish-app.sh "stream-applications/applications/sink/${{ matrix.app }}"
   sources:
     if: ${{ needs.parameters.outputs.sources != '' && needs.parameters.outputs.sources != null }}
     needs:
@@ -315,16 +335,23 @@ jobs:
       - name: 'Configure: Install Java'
         uses: actions/setup-java@v1
         with:
-          java-version: 17
+          java-version: ${{ needs.parameters.outputs.jdk_build }}
+      - name: 'Configure: Install Pack'
+        uses: ./.github/actions/install-pack
       - name: 'Build: ${{ matrix.app }}'
         shell: bash
         env:
-          VERSION: ${{ inputs.version }}
-          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
           CI_DEPLOY_USERNAME: ${{ secrets.CI_DEPLOY_USERNAME }}
           CI_DEPLOY_PASSWORD: ${{ secrets.CI_DEPLOY_PASSWORD }}
+          DEFAULT_JDK: ${{ needs.parameters.outputs.jre_version }}
         run: ./build-app.sh "stream-applications/applications/source/${{ matrix.app }}"
+      - name: 'Publish: ${{ matrix.app }}'
+        shell: bash
+        env:
+          DOCKER_HUB_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+          DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          DEFAULT_JDK: ${{ needs.parameters.outputs.jre_version }}
+        run: ./publish-app.sh "stream-applications/applications/sink/${{ matrix.app }}"
 #  scale-down-runners:
 #    if: ${{ success() }}
 #    runs-on: ubuntu-latest
