--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -212,7 +212,7 @@ jobs:
           echo "::notice ::building - stream-applications-build"
           $ROOT_DIR/mvnw ${{ inputs.verbose && '--debug' || '' }} -s $ROOT_DIR/.settings.xml deploy -f stream-applications-build
           echo "::notice ::building - functions"
-          $ROOT_DIR/mvnw ${{ inputs.verbose && '--debug' || '' }} -s $ROOT_DIR/.settings.xml deploy -f functions
+          $ROOT_DIR/mvnw ${{ inputs.verbose && '--debug' || '' }} -T 1.5C -s $ROOT_DIR/.settings.xml deploy -f functions
           echo "::notice ::building - function-dependencies"
           $ROOT_DIR/mvnw ${{ inputs.verbose && '--debug' || '' }} -s $ROOT_DIR/.settings.xml deploy -f functions/function-dependencies
           echo "::notice ::building - stream-applications-core"
